--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,39 @@
----
-layout: default
----
+{% include top.html %}
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+{% include header.html %}
 
-  <div class="entry">
-    {{ content }}
-  </div>
+<article class="main-content">
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
+    <div class="wrapper">
 
-  {% include disqus.html %}
+        <header class="section-header">
+            <h1 class="section-title">{{ page.title }}</h1>
+            <span class="section-subtitle"><time datetime="{{ page.date }}" pubdate>{{ page.date | date_to_string }}</time>{% for tag in page.tags %}, <a class="tag_list_link" href="/tag/{{ tag }}">{{ tag }}</a>{% endfor %}</span>
+        </header>
+      
+        <section class="post-content">
+
+        	{{ page.content | markdownify }}
+
+            <div class="post-nav">
+
+                <span class="section-subtitle">Share on <a href="https://twitter.com/home?status={{ page.title }}+{{ site.base }}{{ page.url }}" target="_blank">Twitter</a>, <a href="https://www.facebook.com/share.php?u={{ site.base }}{{ page.url }}&amp;title={{ page.title }}" target="_blank">Facebook</a>, <a href="https://plus.google.com/share?url={{ site.base }}{{ page.url }}" target="_blank">Google+</a></span><br>
+
+				{% if page.previous.url %} 
+                	<a href="{{page.previous.url}}" class="button">Prev</a>
+				{% endif %} 
+				{% if page.next.url %} 
+                	<a href="{{page.next.url}}" class="button">Next</a>
+				{% endif %} 
+
+            </div>
+
+        </section>
+
+    </div>
+
 </article>
+
+{% include footer.html %}
+
+{% include bottom.html %}
